[package]
name = "ghafuse"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = { git = "https://github.com/zargony/rust-fuse", rev = "54c8405" }
snafu = "0.5.0"
libc = "0.2.62"
