[package]
name = "ghafuse"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fuse = { git = "https://github.com/zargony/rust-fuse", rev = "54c8405" }
libc = "0.2.62"
reqwest = "0.9.21"
serde = "1.0.101"
serde_json = "1.0.40"
snafu = "0.5.0"
structopt = "0.3.2"
